--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -32,6 +32,9 @@ li:hover {
   background-color: rgba(255, 255, 255, 0.25)
 }
 
+a:visited {
+  color: black;
+}
 
 
 @media screen and (max-width: 914px) {
