--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -1,60 +1,74 @@
-
-
-.portfolio-image{
-    width: 100%;
-    height:50%;
-border-radius: 10px;
-  align-items: center;
+.portfolio-image {
+  width: 100%;
+  vertical-align: top;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .project-cover-text {
-    display: none;
-  }
-
-.project-cover {
-    flex-direction: row;
-    justify-content: center;
-    margin-bottom: 10px;
+  display: none;
 }
 
+.project-cover {
+  position: relative;
+}
+
+.project-cover:hover .project-cover-text {
+  display: flex;
+  position: absolute;
+  width: 94%;
+  margin-top: 18%;
+  padding: 20px;
+  background-color: rgb(143, 182, 211);
+  z-index: 100;
+  justify-content: space-between;
+}
+
+.project-cover:hover img {
+  filter: blur(5px);
+}
+
+.github {
+  text-align: left;
+}
+
+.project-name {
+  align-items: center;
+  font-weight: bolder;
+}
+.deployed {
+  text-align: right;
+}
+
+.github:hover a{
+  color:white;
+}
+
+.deployed:hover a{
+  color:white;
+}
+
+a:visited {
+  color: black;
+}
+
+
 .col-1 {
-    width: 49%;
-    float: left;
-    
-    
+  width: 49%;
+  float: left;
 }
 
 .col-2 {
-    width: 49%;
-    float: right;
-    
+  width: 49%;
+  float: right;
 }
-  .project-cover:hover .project-cover-text {
-    position: absolute;
-    text-align:initial;
-    display: flex;
-    height:inherit;
-    width: inherit;
-    display: block;
-    font-family: sora;
-    font-size: 26px;
-    background-color: rgba(255, 255, 255, 0.75);
-    border: 2px solid rgba(255, 255, 255, 0.01);
-    border-radius: 10px;
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+
+@media screen and (max-width: 1100px) {
+  .col-1 {
+    width: 100%;
   }
 
-
-  @media screen and (max-width: 1100px) {
-    .col-1 {
-        width: 100%;
-        
-        
-        
-    }
-    
-    .col-2 {
-        width: 100%;
-      
-    }
+  .col-2 {
+    width: 100%;
+  }
 }
